--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-config/_pycache_/
+config/__pycache__/
 build/
 config/__pycache__/
-gui/_pycache_/
-processor/_pycache_/
-utils/_pycache_/
+gui/__pycache__/
+processor/__pycache__/
+utils/__pycache__/
 __pycache__/
